--- a/src/app/components/MessageItem/MessageItem.module.css
+++ b/src/app/components/MessageItem/MessageItem.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    padding-bottom: 16px;
+    padding: 10px 16px 0;
     max-width: 100%;
     word-wrap: break-word;
 }
